# firebase-rest-api

./: .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs.yml  feature-request.yml  others.yml
.github/workflows/: build.yml  greetings.yml  publish.yml  release.yml  tests.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: my-styles.css
docs/firebase/: firebase.auth.rst  firebase.database.rst  firebase.firestore.rst  firebase.rst  firebase.storage.rst  modules.rst
docs/guide/: authentication.rst  database.rst  firebase-rest-api.rst  firestore.rst  setup.rst  storage.rst
firebase/: __init__.py  _custom_requests.py  _exception.py  _service_account_credentials.py
firebase/auth/: __init__.py
firebase/database/: __init__.py  _closable_sse_client.py  _custom_sse_client.py  _db_convert.py  _keep_auth_session.py  _stream.py
firebase/firestore/: __init__.py  _utils.py
firebase/storage/: __init__.py
tests/: __init__.py  config.py  config.template.py  conftest.py  test_auth.py  test_database.py  test_firestore.py  test_setup.py  test_storage.py  tools.py
tests/static/: test-file.txt
