
#   Copyright (c) 2022 Asif Arman Rahman
#   Licensed under MIT (https://github.com/AsifArmanRahman/firebase/blob/main/LICENSE)

# --------------------------------------------------------------------------------------


[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'


[project]

# Define the library name, this is what is used along with `pip install`.
name = 'firebase-rest-api'

# Define the version of this library.
version = '0.4.6'

# Here is a small description of the library. This appears
# when someone searches for the library on https://pypi.org/search.
description = "A simple python wrapper for Google's Firebase REST API's."

# I have a long description but that will just be my README
# file of `markdown` type
readme = 'README.md'

# Here I can specify the python version necessary to run this library.
requires-python = '>=3.6'

# Define the Author's name and email.
authors = [
	{ name = 'Asif Arman Rahman', email = 'AsifArmanRahman@gmail.com' },
]

# Here are the keywords of my library.
keywords = [
	'firebase',
	'firebase-auth',
	'firebase-database',
	'firebase-realtime-database',
	'firebase-storage',
]

# Additional classifiers that give some characteristics about the package.
# For a complete list go to https://pypi.org/classifiers/.
classifiers = [

	# I can say what phase of development my library is in.
	'Development Status :: 5 - Production/Stable',

	# My Intended audience is mostly those who understand finance.
	'Intended Audience :: Developers',

	# Here I'll define the license that guides my library.
	'License :: OSI Approved :: MIT License',

	# Here I'll note that package was written in English.
	'Natural Language :: English',

	# Here I'll note that any operating system can use it.
	'Operating System :: OS Independent',

	# Here I'll specify the version of Python it uses.
	'Programming Language :: Python',
	'Programming Language :: Python :: 3',
	'Programming Language :: Python :: 3.6',
	'Programming Language :: Python :: 3.7',
	'Programming Language :: Python :: 3.8',
	'Programming Language :: Python :: 3.9',
	'Programming Language :: Python :: 3.10',

	# Here are the topics that my library covers.
	'Topic :: Software Development :: Libraries :: Python Modules',
]

# These are the dependencies the library needs in order to run.
dependencies = [
	'gcloud>=0.18.3',
	'oauth2client>=4.1.3',
	'python_jwt>=3.3.2',
	'requests>=2.27.1',
	'six>=1.16.0',
]


[project.optional-dependencies]

docs = [
	'Sphinx>=5.0.2',
	'sphinx-rtd-theme>=1.0.0',
	'sphinx_design>=0.2.0',
	'toml>=0.10.2'
]


[project.urls]

# Here is the URL where you can find the code, in this case on GitHub.
Source = 'https://github.com/AsifArmanRahman/firebase-rest-api'

# Here is the URL where you can find the documentation of the library, in this case on Read the Docs.
Documentation = 'https://firebase-rest-api.readthedocs.io/'


[tool.flit.module]
name = 'firebase'
