[build-system]
requires = ['flit_core >=3.2,<4']
build-backend = 'flit_core.buildapi'

[project]
name = "firebase-rest-api"
version = "1.11.0"
readme = "README.md"
description = "A simple python wrapper for Google's Firebase REST API's."
requires-python = ">=3.6"
keywords = [
  "firebase",
  "firebase-auth",
  "firebase-database",
  "firebase-firestore",
  "firebase-realtime-database",
  "firebase-storage",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "google-auth>=2.9.1",
  "google-cloud-firestore>=2.5.3",
  "google-cloud-storage>=2.0.0",
  "pkce>=1.0.0",
  "python_jwt>=3.3.2",
  "requests>=2.27.1",
  "six>=1.16.0"
]

  [[project.authors]]
  name = "Asif Arman Rahman"
  email = "asifarmanrahman@gmail.com"

  [project.optional-dependencies]
  tests = [
    "flit>=3.7.1",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "python-decouple>=3.6"
  ]

  docs = [
    "Sphinx>=5.0.2",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx_design>=0.2.0",
    "toml>=0.10.2"
  ]

  [project.urls]
  Source = "https://github.com/AsifArmanRahman/firebase-rest-api"
  Documentation = "https://firebase-rest-api.readthedocs.io/"

[tool.flit.module]
name = "firebase"
